--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,8 @@ script:
   - bash -xve ./test/travis_prepare.bash
   - source ~/catkin_ws/devel/setup.bash
   - bash -xve ./test/travis_test.bash
+
+language: ruby
+rvm:
+ - 2.2
+ - jruby
