--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,5 @@
 sudo: required
 dist: trusty
 
-script:
-  - bash -xve ./test/travis_prepare.bash
-  - source ~/catkin_ws/devel/setup.bash
-  - bash -xve ./test/travis_test.bash
-
-language: ruby
-rvm:
- - 2.2
- - jruby
+scriot:
+  - bash -xve ./test/travis_ros_install.bash
